--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,15 @@
     </licenses>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
 
-        <jackson.version>2.9.6</jackson.version>
+        <jackson.version>2.9.7</jackson.version>
         <antlr4.version>4.7.1</antlr4.version>
 
-        <endpoints-framework.version>2.1.3-SNAPSHOT</endpoints-framework.version>
+        <endpoints-framework.version>2.2.0</endpoints-framework.version>
     </properties>
 
     <dependencies>
@@ -39,7 +41,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>26.0-android</version>
+            <version>27.0.1-android</version>
         </dependency>
         <!--Fields expression parsing-->
         <dependency>
@@ -62,7 +64,7 @@
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-discovery</artifactId>
-            <version>v1-rev67-1.24.1</version>
+            <version>v1-rev20180813-1.27.0</version>
         </dependency>
         <!--Endpoints-->
         <dependency>
@@ -81,12 +83,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.21.0</version>
+            <version>2.23.4</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
-            <version>2.5.2</version>
+            <version>3.0.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -159,7 +162,7 @@
                         <phase>process-sources</phase>
                         <configuration>
                             <failOnMissingHeader>true</failOnMissingHeader>
-                            <failOnNotUptodateHeader>true</failOnNotUptodateHeader>
+                            <failOnNotUptodateHeader>false</failOnNotUptodateHeader>
                         </configuration>
                     </execution>
                 </executions>
