--- a/pom.xml
+++ b/pom.xml
@@ -24,23 +24,28 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-
-        <jackson.version>2.9.8</jackson.version>
-        <antlr4.version>4.7.1</antlr4.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
         <endpoints-framework.version>2.2.1</endpoints-framework.version>
+        <!--Should be compatible with version from endpoints-framework-->
+        <jackson.version>2.9.8</jackson.version>
+        <http-client.version>1.25.0</http-client.version>
+        <repackagedDir>endpoints.repackaged</repackagedDir>
+
+        <antlr4.version>4.7.1</antlr4.version>
     </properties>
 
     <dependencies>
-        <!--Utils-->
+        <!--Endpoints-->
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>27.0.1-android</version>
+            <groupId>com.google.endpoints</groupId>
+            <artifactId>endpoints-framework</artifactId>
+            <version>${endpoints-framework.version}</version>
+            <!--Let implementors use their own version (might use the -all artifact)-->
+            <scope>provided</scope>
         </dependency>
+        
         <!--Fields expression parsing-->
         <dependency>
             <groupId>org.antlr</groupId>
@@ -53,26 +58,13 @@
             <artifactId>jackson-core</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
         <!--Discovery resource analysis-->
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-discovery</artifactId>
-            <version>v1-rev20180813-1.27.0</version>
+            <version>v1-rev91-${http-client.version}</version>
         </dependency>
-        <!--Endpoints-->
-        <dependency>
-            <groupId>com.google.endpoints</groupId>
-            <artifactId>endpoints-framework</artifactId>
-            <version>${endpoints-framework.version}</version>
-            <!--Let implementors use their own version (might use the -all artifact)-->
-            <scope>provided</scope>
-        </dependency>
-
+        
         <!--Testing-->
         <dependency>
             <groupId>junit</groupId>
@@ -163,6 +155,45 @@
                         <configuration>
                             <failOnMissingHeader>true</failOnMissingHeader>
                             <failOnNotUptodateHeader>false</failOnNotUptodateHeader>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--creates an artifact with "all" classifier, to be used with endpoints-framework-all-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <shadedClassifierName>all</shadedClassifierName>
+                            <artifactSet>
+                                <includes>
+                                    <include>com.fasterxml.jackson.*:*</include>
+                                </includes>
+                            </artifactSet>
+                            <relocations>
+                                <!--Used-->
+                                <relocation>
+                                    <pattern>com.fasterxml</pattern>
+                                    <shadedPattern>${repackagedDir}.com.fasterxml</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.google.api.client</pattern>
+                                    <shadedPattern>${repackagedDir}.com.google.api.client</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.google.common</pattern>
+                                    <shadedPattern>${repackagedDir}.com.google.common</shadedPattern>
+                                </relocation>
+                                <!--endpoints-framework has other relocations, but not relevant to this project-->
+                            </relocations>
                         </configuration>
                     </execution>
                 </executions>
