Fix integration test on Discovery

--- a/pom.xml
+++ b/pom.xml
@@ -59,10 +59,11 @@
             <version>${jackson.version}</version>
         </dependency>
         <!--Discovery resource analysis-->
+        <!--Note: endpoints-framework embeds its own version of discovery, without repackaging. It will shadow this dependency.-->
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-discovery</artifactId>
-            <version>v1-rev91-${http-client.version}</version>
+            <version>v1-rev94-${http-client.version}</version>
         </dependency>
         
         <!--Testing-->
