--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.aodocs.endpoints</groupId>
     <artifactId>endpoints-partialresponse</artifactId>
-    <version>1.3-SNAPSHNOT</version>
+    <version>1.3-SNAPSHOT</version>
 
     <name>Partial response support for Cloud Endpoints v2</name>
     <description>This project provides an implementation of EndpointsServlet with partial response support using "fields" parameter in Discovery-based APIs.</description>
@@ -22,6 +22,13 @@
         </license>
     </licenses>
 
+    <scm>
+        <connection>scm:git:${endpoints-partialresponse.scm.connection}</connection>
+        <developerConnection>scm:git:${endpoints-partialresponse.scm.connection}</developerConnection>
+        <url>${endpoints-partialresponse.scm.url}</url>
+        <tag>HEAD</tag>
+    </scm>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -34,6 +41,8 @@
         <repackagedDir>endpoints.repackaged</repackagedDir>
 
         <antlr4.version>4.7.1</antlr4.version>
+        <endpoints-partialresponse.scm.connection>git@github.com:AODocs/endpoints-partialresponse.git</endpoints-partialresponse.scm.connection>
+        <endpoints-partialresponse.scm.url>https://github.com/AODocs/endpoints-partialresponse</endpoints-partialresponse.scm.url>
     </properties>
 
     <dependencies>
