--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.aodocs.endpoints</groupId>
     <artifactId>endpoints-partialresponse</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>1.5-SNAPSHOT</version>
 
     <name>Partial response support for Cloud Endpoints v2</name>
     <description>This project provides an implementation of EndpointsServlet with partial response support using "fields" parameter in Discovery-based APIs.</description>
@@ -48,7 +48,7 @@
     <dependencies>
         <!--Endpoints-->
         <dependency>
-            <groupId>com.google.endpoints</groupId>
+            <groupId>com.altirnao.endpoints</groupId>
             <artifactId>endpoints-framework</artifactId>
             <version>${endpoints-framework.version}</version>
             <!--Let implementors use their own version (might use the -all artifact)-->
@@ -95,6 +95,19 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+        <repository>
+            <id>artifactory</id>
+            <name>libs-release</name>
+            <url>https://aodocs.jfrog.io/aodocs/libs-release</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
