Add settings.xml for artifactory configuration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,5 @@
 language: java
+
+install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V --settings ./settings.xml
+
+script: mvn test -B -q --settings ./settings.xml
