Migrate to Java 8 - Use JDK's Stream / Optional instead of Guava classes - Lambdaify code

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.1-jre</version>
+        </dependency>
+        
         <!--Endpoints-->
         <dependency>
             <groupId>com.altirnao.endpoints</groupId>
