--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <repackagedDir>endpoints.repackaged</repackagedDir>
 
-        <endpoints-framework.version>2.2.4</endpoints-framework.version>
+        <endpoints-framework.version>2.3.3</endpoints-framework.version>
         <!--Should be compatible with version from endpoints-framework-->
-        <jackson.version>2.9.8</jackson.version>
+        <jackson.version>2.9.10</jackson.version>
         <http-client.version>1.25.0</http-client.version>
-        <antlr4.version>4.7.1</antlr4.version>
+        <antlr4.version>4.7.2</antlr4.version>
 
         <endpoints-partialresponse.scm.connection>git@github.com:AODocs/endpoints-partialresponse.git</endpoints-partialresponse.scm.connection>
         <endpoints-partialresponse.scm.url>https://github.com/AODocs/endpoints-partialresponse</endpoints-partialresponse.scm.url>
@@ -49,12 +49,12 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>27.1-jre</version>
+            <version>28.1-jre</version>
         </dependency>
         
         <!--Endpoints-->
         <dependency>
-            <groupId>com.altirnao.endpoints</groupId>
+            <groupId>com.aodocs.endpoints</groupId>
             <artifactId>endpoints-framework</artifactId>
             <version>${endpoints-framework.version}</version>
             <!--Let implementors use their own version (might use the -all artifact)-->
@@ -91,13 +91,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.23.4</version>
+            <version>3.1.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
-            <version>3.0.3</version>
+            <version>3.1.10</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
