--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.aodocs.endpoints</groupId>
     <artifactId>endpoints-partialresponse</artifactId>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.6</version>
 
     <name>Partial response support for Cloud Endpoints v2</name>
     <description>This project provides an implementation of EndpointsServlet with partial response support using "fields" parameter in Discovery-based APIs.</description>
@@ -26,7 +26,7 @@
         <connection>scm:git:${endpoints-partialresponse.scm.connection}</connection>
         <developerConnection>scm:git:${endpoints-partialresponse.scm.connection}</developerConnection>
         <url>${endpoints-partialresponse.scm.url}</url>
-        <tag>HEAD</tag>
+        <tag>v1.6</tag>
     </scm>
 
     <properties>
